# algorithm

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: cmake.yml
basic/: xmake.lua
basic/sort/: CMakeLists.txt  xmake.lua
basic/sort/quick_sort/: CMakeLists.txt  Makefile  quick_sort.cpp  xmake.lua
contest/: CMakeLists.txt
contest/codeforces/: 1748C.cpp  1750D.cpp  CMakeLists.txt
contest/noip/2022/: CMakeLists.txt  barrack.cpp  barrack2.cpp
data_structures/: CMakeLists.txt  xmake.lua
data_structures/bst/: CMakeLists.txt  README.md  xmake.lua
data_structures/bst/splay/: CMakeLists.txt  Makefile  splay.cpp  xmake.lua
data_structures/bst/ziptree/: CMakeLists.txt  Makefile  xmake.lua  ziptree.cpp  ziptree_ptr.cpp  ziptree_stl.cpp  ziptree_stlptr.cpp
data_structures/bst/ziptree_ptr/: CMakeLists.txt  Makefile  xmake.lua
graph/: CMakeLists.txt  xmake.lua
graph/dsu/: CMakeLists.txt  dsu.cpp  xmake.lua
graph/dynamic_graph/: CMakeLists.txt  README.md  dynamic_graph.cpp  xmake.lua
graph/shortest_path/: README.md  floyd.cpp
misc/: modulo.cpp  read_opt.cpp  xorshift.cpp
problems/: CMakeLists.txt
problems/loj/: 105.cpp  CMakeLists.txt
